@startuml

class RestaurantChain {
  -chainId: int
  -restaurantLocations: RestaurantLocation[]
  -cuisineType: string
  -numberOfLocations: int
  -parentCompany: string
}

class Company {
  -name: string
  -foundingYear: int
  -description: string
  -website: string
  -phone: string
  -industry: string
  -ceo: string
  -isPubliclyTraded: bool
  -country: string
  -founder: string
  -totalEmployees: int
}

class RestaurantLocation {
  -name: string
  -address: string
  -city: string
  -state: string
  -zipCode: string
  -employees: Employee[]
  -isOpen: bool
  -hasDriveThru: bool
}

class Employee {
  -jobTitle: string
  -salary: float
  -startDate: DateTime
  -awards: string[]
}

class User {
  -id: int
  -firstName: string
  -lastName: string
  -email: string
  -hashedPassword: string
  -phoneNumber: string
  -address: string
  -birthDate: DateTime
  -membershipExpirationDate: DateTime
  -role: string
  +login(password: string)
  +updateProfile(address: string, phoneNumber: string)
  +renewMembership(expirationDate: DateTime)
  +changePassword(newPassword: string)
  +hasMembershipExpired()
}

RestaurantChain "1" *-- "many" RestaurantLocation : owns
Company <|-- RestaurantChain
RestaurantLocation "1" *-- "many" Employee : has
Employee <|-- User

@enduml
